# fastapi-backend-setup

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  ruff.toml
.cursor/: rules  rules.mdc
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_create_movies_shows_bookings_tables.py  0003_create_visiting_table.py  60178fb08e33_create_a_test_table.py
app/: __init__.py  config.py  database.py  main.py  module.py
app/common/endpoints/: api_router.py
app/common/models/: base_model.py  response.py
app/common/modules/: db_module.py
app/exceptions/: handlers.py
app/features/movies/: module.py
app/features/movies/application/models/: booking_response_model.py  movie_details_model.py  movie_response_model.py  seat_lock_model.py  show_response_model.py
app/features/movies/application/services/: booking_service.py  booking_service_handler.py  movie_service.py  movie_service_handler.py  seat_lock_service.py  seat_lock_service_handler.py  show_service.py  show_service_handler.py
app/features/movies/domain/entities/: booking_entity.py  movie_entity.py  show_entity.py  visiting_entity.py
app/features/movies/domain/repository/: booking_repository.py  booking_repository_handler.py  movie_repository.py  movie_repository_handler.py  show_repository.py  show_repository_handler.py  visiting_repository.py  visiting_repository_handler.py
app/features/movies/endpoints/: booking_controller.py  movie_controller.py  seat_lock_controller.py  show_controller.py
app/models/: __init__.py  example.py
